# opencv

./: .gitattributes  Makefile.linux  Makefile.windows  README.md  capi.go  hello.go  opencv_cv.go  opencv_cxcore.go  opencv_cxcore_cxtypes_h.go  opencv_cxcore_example_test.go  opencv_doc.go  opencv_highgui.go  opencv_highgui_loadsave.go  videoinput_windows.go
examples/: cam.go  cam_linux.go  edge.go  facedetect.go  hellocv.go  inpaint.go  player.go  videoinput.go
ffmpeg.dll/: fetch-ffmpeg-dll.go
opencv110/: CMakeLists.txt  build_msvc.bat  build_msvc_proj.bat  fetch-ffmpeg-dll.go  hello.c  hello.cpp  opencv.def
opencv110/cxcore/src/: cxswitcher_new.cpp
opencv110/examples/: cam.cpp
opencv110/highgui/src/: _highgui.h  cvcap.cpp  cvcap_dshow.cpp  cvcap_qt.cpp  loadsave_new.cpp  window_carbon.cpp  window_w32.cpp
opencv110/highgui/src/linux/: cvcap_gstreamer.cpp  cvcap_v4l.cpp  cvcap_xine.cpp
opencv110/highgui/src/windows/: cvcap_dshow.cpp
